[package]
name = "lmdb-lofire"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.14.0"
authors = ["NikoPLP <info@parlepeuple.fr>"]
license = "Apache-2.0"
description = "Idiomatic and safe LMDB wrapper."
documentation = "https://docs.rs/lmdb-lofire"
homepage = "https://github.com/nikoPLP/lmdb-rs"
repository = "https://github.com/nikoPLP/lmdb-rs.git"
readme = "README.md"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

exclude = [
  # Exclude CI config files from package.
  "/.appveyor.yml",
  "/.travis.yml",
  "/azure-pipelines-template.yml",
  "/azure-pipelines.yml",
]

[lib]
name = "lmdb"

[badges]
travis-ci = { repository = "nikoPLP/lmdb-rs" }
appveyor = { repository = "nikoPLP/lmdb-rs" }

[workspace]
members = [
  "lmdb-sys",
]

[dependencies]
bitflags = "1"
byteorder = "1"
libc = "0.2"

# In order to ensure that we test lmdb-lofire in CI against the in-tree version
# of lmdb-lofire-sys, we specify the dependency as a path here.
#
# But we can't publish the lmdb-lofire crate to crates.io with a path dependency,
# so we have to temporarily change this to point to the current version
# of lmdb-lofire-sys on crates.io when publishing lmdb-lofire to that crate registry.
#
# (See "Publishing to crates.io" in README.md for more information.)
lmdb-lofire-sys = { path = "./lmdb-sys" }

[dev-dependencies]
rand = "0.4"
tempdir = "0.3"

[features]
default = []
with-asan = ["lmdb-lofire-sys/with-asan"]
with-fuzzer = ["lmdb-lofire-sys/with-fuzzer"]
with-fuzzer-no-link = ["lmdb-lofire-sys/with-fuzzer-no-link"]
