[package]
name = "lmdb-crypto-rs"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.14.0"
authors = ["Dan Burkert <dan@danburkert.com>", "Victor Porof <vporof@mozilla.com>","NikoPLP <info@parlepeuple.fr>"]
license = "Apache-2.0"
description = "Idiomatic and safe LMDB wrapper."
documentation = "https://docs.rs/lmdb-crypto-rs"
homepage = "https://github.com/nikoPLP/lmdb-rs"
repository = "https://github.com/nikoPLP/lmdb-rs.git"
readme = "README.md"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

exclude = [
  # Exclude CI config files from package.
  "/.appveyor.yml",
  "/.travis.yml",
  "/azure-pipelines-template.yml",
  "/azure-pipelines.yml",
]

[lib]
name = "lmdb"

[badges]
travis-ci = { repository = "nikoPLP/lmdb-rs" }
appveyor = { repository = "nikoPLP/lmdb-rs" }

[workspace]
members = [
  "lmdb-sys",
]

[dependencies]
bitflags = "1"
byteorder = "1"
libc = "0.2"

# In order to ensure that we test lmdb-crypto-rs in CI against the in-tree version
# of lmdb-crypto-sys, we specify the dependency as a path here.
#
# But we can't publish the lmdb-crypto-rs crate to crates.io with a path dependency,
# so we have to temporarily change this to point to the current version
# of lmdb-crypto-sys on crates.io when publishing lmdb-crypto to that crate registry.
#
# (See "Publishing to crates.io" in README.md for more information.)
lmdb-crypto-sys = { path = "./lmdb-sys" }

[dev-dependencies]
rand = "0.4"
tempdir = "0.3"

[features]
default = []
with-asan = ["lmdb-crypto-sys/with-asan"]
with-fuzzer = ["lmdb-crypto-sys/with-fuzzer"]
with-fuzzer-no-link = ["lmdb-crypto-sys/with-fuzzer-no-link"]
